--- a/META.yml
+++ b/META.yml
@@ -1,16 +1,16 @@
 --- #YAML:1.0
 name: Win32-PerfLib
 abstract: Accessing the Windows NT Performance Counter
-version: 0.06
+version: 0.07
 author:
   - Jutta M. Klebe <jmk@bybyte.de>
   - Jan Dubois <jand@activestate.com>
 license: perl
 requires: 
-  perl: 5.6
+  perl: 5.006
 resources:
   license: http://dev.perl.org/licenses/
-  homepage: http://code.google.com/p/libwin32/
+  repository: https://github.com/jandubois/win32-perflib
 meta-spec:
    version: 1.3
    url: http://module-build.sourceforge.net/META-spec-v1.3.html
